Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -1,11 +1,10 @@
 # Vulnversity Room - CTF
 
 This weekend I completed the Vulnversity room. 
-This room was an introductory room. 
+This room was an introductory room that gave guidance on where to look and stepped through the point of getting a reverse shell operating.
+From there, the priviledge escalation was left up to me to work out. 
 
-It was a webserver exploitation based on PHP and then privilege escalation through their ubuntu web server.
-
-In summary, the server had an upload port where we uploaded a reverse PHP shell, then through this shell escalated our privilages to root using a misconfigured permission on the systemctl program within the Ubuntu server.
+The target was a webserver, the exploitation based was based on PHP. The web server had a PHP upload portal where I was able to upload a reverse PHP shell, then through this shell escalate my privilages to root using a misconfigured permission on the systemctl program within the Ubuntu server.
 
 Note I have not included the basic setup steps for TryHackMe. 
 Initially I started usinmg the provide 'AttackBox' from TryHackMe, but part way I ended up using my open Kali linux box connected via the VPN.
@@ -39,21 +38,21 @@ From here we discovered the 'internal' folder, browsing to this showed us an upl
 
 ## Step 2: Attempt to deliver a pay load and compromise the server
 
-I use Burp to try and findout what types of file extensions I can be uploaded, hoping for a PHP based file. 
-Using Burp's sniper attack allows me to try various file extensions very quickly. 
+I used Burp to try and find out what types of file extensions can be uploaded, hoping for a PHP based file. 
+Using Burp's sniper attack allowed me to try various file extensions very quickly. 
  
 ![image](https://user-images.githubusercontent.com/60744763/120155034-cf2ebf00-c233-11eb-88b3-a73405d0430d.png)
 
 This identified that .phtml files can be uploaded, see above.
 
-### No we deliver the payload:
+### Now we deliver the payload:
 
 I uploaded a php reverse shell as a .phtml file using the target's upload page. 
-I edited the reverse shell script variables so it points to my Kali linux’s IP and port. 
+I edited the reverse shell script variables so it points back to my Kali linux’s IP and port. 
 The reverse shell was from here: https://github.com/pentestmonkey/php-reverse-shell/blob/master/php-reverse-shell.php 
 
-Then I setup another netcat listener with this command: `nc -lvnp 1234`
-This will listen for a connection on port 1234. 
+Then I setup a netcat listener with this command: `nc -lvnp 1234`
+This will listen for an incoming connection on port 1234. 
 *Note the php reverse shell must be set with this port and my IP address so it can make a connection.*
 
 Then I went to the url http://10.10.151.175:3333/internal/uploads/php-reverse-shell.phtml to run the script I just uploaded. 
@@ -74,7 +73,7 @@ Searching around on this server, I found the first flag in the user's home folde
 Now we want to attemp to get root access. I will look for files with the SUID bit set, maybe one of them can be exploited.
 
 I used the command `find . -perm /4000` to files with the SUID permissions set. 
-This showed that `systemctl` had the sticky-bit set, which is not normal. As a normal user can stop, start and even create services.
+This showed that `systemctl` had the sticky-bit set, which is not normal. Since a normal user can stop, start and even create services.
 
 At this point my plan is to create a service that launches a shell which I can access with the systemctl command. 
 Now researching how to do this...
@@ -100,7 +99,7 @@ WantedBy=multi-user.target
 I named the file with a phtml extension and uploaded it through the site (this was quicker than using the nc terminal to create the service file).
 
 Then I renamed the uploaded file from my active shell on the webserver to root.service. 
-Then I ran the following command to create the appropriate symlinks and allow the system to run the service: 
+I ran the following command to create the appropriate symlinks and allow the system to run the service: 
 `systemctl enable /var/www/html/internal/uploads/root.service`
 
 ![image](https://user-images.githubusercontent.com/60744763/120155982-cc809980-c234-11eb-94ba-2cb1ab4b9bb9.png)
