Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -6,8 +6,9 @@ From there, the priviledge escalation was left up to me to work out.
 
 The target was a webserver, the exploitation based was based on PHP. The web server had a PHP upload portal where I was able to upload a reverse PHP shell, then through this shell escalate my privilages to root using a misconfigured permission on the systemctl program within the Ubuntu server.
 
-Note I have not included the basic setup steps for TryHackMe. 
-Initially I started usinmg the provide 'AttackBox' from TryHackMe, but part way I ended up using my open Kali linux box connected via the VPN.
+Notes: 
+ - I have not included the basic setup steps for TryHackMe. 
+ - Initially I started usinmg the provide 'AttackBox' from TryHackMe, but part way I ended up using my open Kali linux box connected via the VPN so my IP address and the target IP address IPs changed a few times throughout my process description below.
 
 Here is how it went:
 
@@ -25,6 +26,8 @@ Then I looked at the versions of the services with these open ports using the -s
 
 We can see Apache running on port 3333, this will be our attack vector. 
 
+### GoBuster to discover interesting folders on the web server
+
 From here we use GoBuster to look for interesting directories on the web server. I  used a brute force method with different word lists.
 After trying with a few word I found some interesting folders.
 
@@ -35,6 +38,9 @@ From here we discovered the 'internal' folder, browsing to this showed us an upl
 ![image](https://user-images.githubusercontent.com/60744763/120154708-7a8b4400-c233-11eb-8603-b287a43fd81b.png)
 
 *Note at this point I changed over to my Kali linux box and reset the target machine, as such the IP address changed.*
+
+Now I looked for additional interseting folders within the /internal URI using GoBuster again.
+This found another folder called uploads which looks interesting, likely the directory where the upload portal drops files. 
 
 ## Step 2: Attempt to deliver a pay load and compromise the server
 
@@ -64,9 +70,9 @@ We can see below the reverse shell has made a connection back to my kali box.
 
 And now I have shell access! 
 
-Searching around on this server, I found the first flag in the user's home folder.
+Searching around on this server, I found the first flag in the user's home folder in a file called 'user.txt'.
 
-![image](https://user-images.githubusercontent.com/60744763/120155639-6267f480-c234-11eb-9e0a-4a654587ef5a.png)
+![image](https://user-images.githubusercontent.com/60744763/120173380-533e7200-c247-11eb-9091-768cf087f58d.png)
 
 ## Step 3: Privilege Escalation
 
