--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -81,10 +81,12 @@ Now we want to attemp to get root access. I will look for files with the SUID bi
 I used the command `find . -perm /4000` to files with the SUID permissions set. 
 This showed that `systemctl` had the sticky-bit set, which is not normal. Since a normal user can stop, start and even create services.
 
-At this point my plan is to create a service that launches a shell which I can access with the systemctl command. 
-Now researching how to do this...
+![image](https://user-images.githubusercontent.com/60744763/120173803-bf20da80-c247-11eb-8a77-87f0e5b9c0e4.png)
 
-I found this article which discusses making a reverse bash shell service to exploit systemctl.
+At this point my plan is to create a service that launches a shell which I can access with the systemctl command. 
+Now researching how to do this... BRB
+
+Ok I'm back! I found this article which discusses making a reverse bash shell service to exploit systemctl.
 https://medium.com/@klockw3rk/privilege-escalation-leveraging-misconfigured-systemctl-permissions-bc62b0b28d49 
 
 
@@ -117,7 +119,7 @@ After this I started the service on the webserver shell with the command `system
 
 Presto! The service connected back to my Kali machine with the reverse shell as root. See below...
 
-![image](https://user-images.githubusercontent.com/60744763/120156128-005bbf00-c235-11eb-9ddf-8ac81e94314a.png)
+![image](https://user-images.githubusercontent.com/60744763/120174190-29d21600-c248-11eb-9cf7-bbf5514c3653.png)
 
 The flag was found in the folder /root/
 
