Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -10,6 +10,16 @@ Notes:
  - I have not included the basic setup steps for TryHackMe. 
  - Initially I started usinmg the provide 'AttackBox' from TryHackMe, but part way I ended up using my open Kali linux box connected via the VPN so my IP address and the target IP address IPs changed a few times throughout my process description below.
 
+### Tools
+I used the following tools:
+- Kali Linux
+- Nmap
+- Netcat
+- GoBuster
+- Burp
+- Linux shell
+- Php reverse shell (see link in write up below)
+
 Here is how it went:
 
 ## Step 1: Reconnaissance
@@ -40,7 +50,10 @@ From here we discovered the 'internal' folder, browsing to this showed us an upl
 *Note at this point I changed over to my Kali linux box and reset the target machine, as such the IP address changed.*
 
 Now I looked for additional interseting folders within the /internal URI using GoBuster again.
-This found another folder called uploads which looks interesting, likely the directory where the upload portal drops files. 
+This found another folder called *uploads* which looks interesting, likely the directory where the upload portal drops files. 
+
+![image](https://user-images.githubusercontent.com/60744763/120176571-c72e4980-c24a-11eb-8e7f-8e684f0761e2.png)
+
 
 ## Step 2: Attempt to deliver a pay load and compromise the server
 
