--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -1,7 +1,8 @@
 # Vulnversity Room - CTF
 
 This weekend I completed the Vulnversity room. 
-This room was an introductory room that gave guidance on where to look and stepped through the point of getting a reverse shell operating.
+This room was an introductory room that gave some guidance on where to look and stepped through the major points of getting the initial reverse shell operating.
+
 From there, the privilege escalation was left up to me to work out. 
 
 The target was a webserver, the exploitation based was based on PHP. The web server had a PHP upload portal where I was able to upload a reverse PHP shell, then through this shell escalate my privileges to root using a misconfigured permission on the systemctl program within the Ubuntu server.
