--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -5,11 +5,11 @@ This room was an introductory room that gave some guidance on where to look and 
 
 From there, the privilege escalation was left up to me to work out. 
 
-The target was a webserver, the exploitation based was based on PHP. The web server had a PHP upload portal where I was able to upload a reverse PHP shell, then through this shell escalate my privileges to root using a misconfigured permission on the systemctl program within the Ubuntu server.
+The target was a webserver, the exploitation based was based on PHP. The web server had a PHP upload portal where I was able to upload a reverse PHP shell, then through this shell escalate my privileges to root using a misconfigured permission on the systemctl program within the server.
 
 Notes: 
  - I have not included the basic setup steps for TryHackMe. 
- - Initially I started usinmg the provide 'AttackBox' from TryHackMe, but part way I ended up using my open Kali linux box connected via the VPN so my IP address and the target IP address IPs changed a few times throughout my process description below.
+ - Initially I started using the provided 'AttackBox' from TryHackMe, but part way I ended up using my open Kali linux box connected via the VPN so my IP address and the target IP address IPs changed a few times throughout my process description below.
 
 ### Tools
 I used the following tools:
