Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -90,9 +90,9 @@ Searching around on this server, I found the first flag in the user's home folde
 
 ## Step 3: Privilege Escalation
 
-Now we want to attemp to get root access. I will look for files with the SUID bit set, maybe one of them can be exploited.
+Now we want to attempt to get root access. I will look for files with the SUID bit set, maybe one of them can be exploited.
 
-I used the command `find . -perm /4000` to files with the SUID permissions set. 
+I used the command `find . -perm /4000` to find files with the SUID permissions set. 
 This showed that `systemctl` had the sticky-bit set, which is not normal. Since a normal user can stop, start and even create services.
 
 ![image](https://user-images.githubusercontent.com/60744763/120173803-bf20da80-c247-11eb-8a77-87f0e5b9c0e4.png)
