Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -104,7 +104,7 @@ Ok I'm back! I found this article which discusses making a reverse bash shell se
 https://medium.com/@klockw3rk/privilege-escalation-leveraging-misconfigured-systemctl-permissions-bc62b0b28d49 
 
 
-I created a file called root.service file as below, which will be my service file:
+I created a file called root.service as below, which will be my service:
 ```
 [Unit]
 Description=root
