Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -82,7 +82,7 @@ We can see below the reverse shell has made a connection back to my kali box.
 
 ![image](https://user-images.githubusercontent.com/60744763/120155466-33ea1980-c234-11eb-81fe-00558f14202d.png)
 
-And now I have shell access! 
+### And now I have shell access! 
 
 Searching around on this server, I found the first flag in the user's home folder in a file called 'user.txt'.
 
@@ -132,6 +132,7 @@ At this point I opened another netcat listener on port 9999 (as per the root.ser
 After this I started the service on the webserver shell with the command `systemctl start root.service`
 
 Presto! The service connected back to my Kali machine with the reverse shell as root. See below...
+### I am (g)root!
 
 ![image](https://user-images.githubusercontent.com/60744763/120174190-29d21600-c248-11eb-9cf7-bbf5514c3653.png)
 
