--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -5,7 +5,7 @@ This room was an introductory room that gave some guidance on where to look and 
 
 From there, the privilege escalation was left up to me to work out. 
 
-The target was a webserver, the exploitation based was based on PHP. The web server had a PHP upload portal where I was able to upload a reverse PHP shell, then through this shell escalate my privileges to root using a misconfigured permission on the systemctl program within the server.
+The target was a web server, the exploitation was based on PHP. The web server had a PHP upload portal where I was able to upload a reverse PHP shell, then through this shell escalate my privileges to root using a misconfigured permission on the systemctl program within the server.
 
 Notes: 
  - I have not included the basic setup steps for TryHackMe. 
