Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -9,7 +9,7 @@ The target was a web server, the exploitation was based on PHP. The web server h
 
 Notes: 
  - I have not included the basic setup steps for TryHackMe. 
- - Initially I started using the provided 'AttackBox' from TryHackMe, but part way I ended up using my open Kali linux box connected via the VPN so my IP address and the target IP address IPs changed a few times throughout my process description below.
+ - Initially I started using the provided 'AttackBox' from TryHackMe, but part way I ended up using my open Kali linux box connected via the VPN so my IP address and the target IP address changed a few times throughout my process description below.
 
 ### Tools
 I used the following tools:
@@ -19,7 +19,7 @@ I used the following tools:
 - GoBuster
 - Burp
 - Linux shell
-- Php reverse shell (see link in write up below)
+- Php reverse shell (see link in the details below)
 
 Here is how it went:
 
