Update 1. Vulnversity Room.md

--- a/1. Vulnversity Room.md
+++ b/1. Vulnversity Room.md
@@ -67,17 +67,16 @@ This identified that .phtml files can be uploaded, see above.
 
 ### Now we deliver the payload:
 
-I uploaded a php reverse shell as a .phtml file using the target's upload page. 
+I uploaded a php reverse shell as a .phtml file using the target's upload page. The reverse shell trys to make an outgoing shell connection to another machine, in this case, my machine. 
 I edited the reverse shell script variables so it points back to my Kali linux’s IP and port. 
 The reverse shell was from here: https://github.com/pentestmonkey/php-reverse-shell/blob/master/php-reverse-shell.php 
 
 Then I setup a netcat listener with this command: `nc -lvnp 1234`
-This will listen for an incoming connection on port 1234. 
-*Note the php reverse shell must be set with this port and my IP address so it can make a connection.*
+This will listen for an incoming connection on port 1234, which our reverse shell script will try to connect to.  
 
 Then I went to the url http://10.10.151.175:3333/internal/uploads/php-reverse-shell.phtml to run the script I just uploaded. 
 
-Seconds later I received a connection on my netcat listener!
+Moments later I received a connection on my netcat listener!
 We can see below the reverse shell has made a connection back to my kali box.
 
 ![image](https://user-images.githubusercontent.com/60744763/120155466-33ea1980-c234-11eb-81fe-00558f14202d.png)
